changing index.html

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         map.setOptions({styles:map_style.google_maps_customization_style});
 
         var TorqueOptions = {
-            user:'viz2',
-            table:'ow',
+            user:'johnb30',
+            table:'super_reduced',
             column:'date',
             steps:750,
             resolution:2,
