updating the table

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         var TorqueOptions = {
             user:'johnb30',
-            table:'super_reduced',
+            table:'protest_data',
             column:'date',
             steps:750,
             resolution:2,
