--- a/index.html
+++ b/index.html
@@ -7,8 +7,37 @@
     <link rel="shortcut icon" href="http://cartodb.com/favicon/favicon_32x32.ico" />
     <link href="http://code.google.com/apis/maps/documentation/javascript/examples/default.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="lib/cartodb.css">
+    <link rel="stylesheet" href="css/jqueryui-smoothness/jquery-ui-1.10.2.custom.min.css">
+    <style>
+        #torque-slider{
+            position:absolute;
+            bottom:18px;
+            right:25px;
+            width:300px;
+        }
+        #torque-pause{
+            position:absolute;
+            bottom:12px;
+            right:345px;
+            width:28px;
+            height: 26px;
+            padding: 1px 2px 2px 2px;
+            z-index: 1000;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+        .playing {background-color: white; background-image: url(img/pause.png); background-repeat:no-repeat; background-position:center; }
+        .paused { background-color: white; background-image: url(img/play.png);background-repeat:no-repeat; background-position:center;}
+/*        #torque-pause .playing {
+            background-image: url('../img/pause.png');
+        }
+        #torque-pause .paused{
+            background-image: url('../img/play.png');
+        }*/
+    </style>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="lib/jquery-ui-1.10.2.custom.min.js"></script>
     <script type="text/javascript" src="lib/wax.g.js"></script>
     <script type="text/javascript" src="lib/cartodb-gmapsv3.js"></script>
     <script type="text/javascript" src="lib/dat.gui.min.js"></script>
@@ -60,11 +89,32 @@
         map.setMapTypeId(google.maps.MapTypeId.ROADMAP);
         map.setOptions({styles:map_style.google_maps_customization_style});
 
+        function init_slider( that ){
+            var that_opts = that.options;
+            $('body').append('<div id="torque-slider"></div>');
+            // Init jQuery UI options
+            $("#torque-slider").slider({
+                min: Math.round(that_opts.start),
+                max: Math.floor(that_opts.end),
+                value: Math.round(that_opts.start),
+                step: that._step,
+                slide: function(event, ui){
+                    that._current = ui.value;
+                    var date = new Date(that._current * 1000);
+                    var date_arry = date.toString().substr(4).split(' ');
+                    that._display.set_time((that._current - that.start) / that._step);                    
+                }
+            });
+        };
+        function on_move (that) {
+            $( "#torque-slider" ).slider({ value: that._current });
+        }
+
         var TorqueOptions = {
             user:'johnb30',
             table:'protest_data',
             column:'date',
-            steps:500,
+            steps:1000,
             resolution:4,
             cumulative:false,
             clock:true,
@@ -73,7 +123,9 @@
             blendmode:'xor',
             trails:true,
             point_type:'circle',
-            cellsize:38.6
+            cellsize:38.6,
+            scrub: init_slider,
+            scrub_move: on_move
         }
 
         var torque = null;
@@ -81,6 +133,22 @@
             Torque.app = new env.app.Instance();
             torque = new Torque.app.addLayer(map, TorqueOptions);
             Torque.env = env;
+
+            var pause = $('<a></a>');
+            $(pause).attr('id','torque-pause')
+            $(pause).addClass("playing");
+            $('body').append(pause);
+            $(pause).click(function(){
+                if($(this).hasClass('paused')){
+                    torque.pause();
+                    $(this).removeClass("paused");
+                    $(this).addClass("playing");
+                } else {
+                    $(this).removeClass("playing");
+                    $(this).addClass("paused");
+                    torque.pause();
+                }
+            });
         });
 
     }
